# flake-templates

./: .gitignore  flake.nix
templates/basic/: flake.nix
templates/python-uv/: .gitignore  flake.nix  pyproject.toml
templates/simnibs/: flake.nix  pyproject.toml
