[project]
name = "simnibs-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.1.0",
    "fmm3dpy>=1.0.0",
    "h5py>=3.15.1",
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.8",
    "mock>=5.2.0",
    "nibabel>=5.3.3",
    "numba>=0.63.1",
    "numpy>=1.9.0",
    "pillow>=12.0.0",
    "pygpc>=0.4.1",
    "pyopengl>=3.1.10",
    "pyside6>=6.10.1",
    "pytest>=9.0.2",
    "python-mumps>=0.0.4",
    "requests>=2.32.5",
    "samseg>=0.4a0",
    "scipy>=1.16.3",
    "setuptools-scm>=9.2.2",
    "tbb-devel>=2022.3.0",
    "petsc4py",
    "simnibs",
]

[tool.uv.sources]
petsc4py = [
    { url = "https://github.com/simnibs/petsc4py/releases/download/v3.21.5/petsc4py-3.21.5-cp311-cp311-manylinux_2_28_x86_64.whl"},
]
simnibs = [
    { url = "https://github.com/simnibs/simnibs/releases/download/v4.5.0/simnibs-4.5.0-cp311-cp311-linux_x86_64.whl"},
]

[tool.uv]
# Perfer system python (necesseray for NixOS)
python-preference = "system"
